--- a/app/views/antigen/v2/global-registration/people-confirmed.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed.html
@@ -29,9 +29,12 @@
         You can <strong>add up to 3 people</strong> you live with for testing.<br><br>
         If you need tests for <strong>more than 4 people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
         <strong>For test sites:</strong><br>
-        If you plan to travel to a test site by motorbike, you can only take one other person you live with.<br><br>
+        If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.<br><br>
+        If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.<br><br>
         <strong>For home testing:</strong><br>
         You cannot order more than 4 home test kits at a time.
+        <!-- <br><br>
+        <strong>In England, Scotland, Wales and Northern Ireland, a child can have a test whatever their age.</strong> -->
       </p>
 
       <table class="govuk-table">
@@ -59,7 +62,7 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text govuk-!-font-size-19">
           <span class="govuk-warning-text__assistive">Warning</span>
-          People you live with who do not have symptoms are not eligible for a PCR test unless they have been in contact with someone with COVID-19. Ordering unnecessary tests is wasting NHS resources.
+          People you live with who do not have symptoms can only get a PCR test if they’ve been in contact with someone who’s tested positive for COVID-19, or they have been asked to get a PCR test. Ordering unnecessary tests is wasting NHS resources.
         </strong>
       </div>
 
