--- a/app/views/antigen/v2/govuk/get-coronavirus-test.html
+++ b/app/views/antigen/v2/govuk/get-coronavirus-test.html
@@ -79,7 +79,7 @@
         <main id="content" role="main" class="content ">
           <header class="covid__page-header covid__page-header--landing-page govuk-!-margin-bottom-0" style="border-top: 10px solid #1d70b8">
             <div class="govuk-width-container covid__page-header-title-wrapper">
-              <div class="govuk-grid-row" >
+              <div class="govuk-grid-row  govuk-!-padding-bottom-3" >
                   <div class="govuk-grid-column-two-thirds" style="height: 4em">
                     <div class="gem-c-action-link gem-c-action-link--simple-light gem-c-action-link--light-text govuk-!-margin-bottom-0">
                       <div class="gem-c-title gem-c-title--inverse govuk-!-margin-top-6 govuk-!-margin-bottom-6">
@@ -93,20 +93,6 @@
                  </div>
               </div>
             </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-two-thirds">
-                <div class="gem-c-action-link gem-c-action-link--simple-light gem-c-action-link--light-text govuk-!-margin-bottom-0">
-                  <div class="gem-c-title gem-c-title--inverse govuk-!-margin-top-6 govuk-!-margin-bottom-6">
-                    <p class="govuk-!-font-size-19">
-                        <strong style="text-decoration: underline; color: #ffffff" class="govuk-!-margin-right-2">
-                          Brexit
-                        </strong>
-                        <span class="govuk-!-margin-right-2" style="color: #ffffff">|</span><span style="color: #ffffff">Check what you need to do</span>
-                    </p>
-                </div>
-             </div>
-          </div>
-        </div>
           </header>
           <div class="govuk-width-container covid__page" data-module="coronavirus-landing-page">
               <div class="govuk-grid-row">
@@ -128,24 +114,19 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl govuk-!-margin-bottom-8 govuk-!-margin-top-8">Get a free PCR test to check if you have coronavirus</h1>
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-8 govuk-!-margin-top-8">Get a free PCR test to check if you have coronavirus (COVID-19)</h1>
               </div>
 
                 <div class="govuk-grid-column-two-thirds">
 
-                    <p class="govuk-body">Use this service to order a test if you have at least one of these 3 coronavirus (COVID-19) symptoms:</p>
+                    <p class="govuk-body">If you have any of these 3 coronavirus (COVID-19) symptoms, use this service to get a polymerase chain reaction (PCR) test as soon as possible:</p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>a high temperature</li>
                       <li>a new, continuous cough</li>
                       <li>you’ve lost your sense of smell or taste or it’s changed</li>
                     </ul>
 
-                    <p class="govuk-body">This is called a PCR test.</p>
-
-                    <p class="govuk-body">
-                      You should not use this service if you’ve received a positive PCR test result in the last 90 days, unless you develop any new symptoms.<br><br>
-                      If you’re not sure, you can <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/get-tested-for-coronavirus/" class="govuk-link">find out which coronavirus test you should get</a>.
-                    </p>
+                    <p class="govuk-body">You can order a PCR test kit to be sent to your home or book an appointment at a walk-in or drive-through test site.</p>
 
                     <div class="govuk-warning-text govuk-!-margin-top-4">
                       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -155,11 +136,15 @@
                       </strong>
                     </div>
 
+                    <p class="govuk-body">
+                      You should not use this service if you’ve received a positive PCR test result in the last 90 days, unless you develop any new symptoms.
+                    </p>
+
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">Getting a PCR test if you have no symptoms</h2>
                     <p class="govuk-body">You can also use this service if:</p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>you’ve been in contact with someone who’s tested positive</li>
-                      <li>you’ve been asked to get a test by a local council or contact tracers</li>
+                      <li>you’ve been asked to get a test by a local council or someone from NHS Test and Trace</li>
                       <li>a GP or other health professional has asked you to get a test</li>
                       <li>you’re taking part in a government pilot project</li>
                       <li>you’ve been asked to get a test to confirm a positive result</li>
@@ -168,24 +153,30 @@
                       <li>you’re in the National Tactical Response Group</li>
                     </ul>
 
+                    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6 govuk-!-margin-bottom-2">Get a free PCR test</h2>
+
+                    <a href="/antigen/{{version}}/refer-and-triage/essential-worker" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+                      Start now
+                      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+                      </svg>
+                    </a>
+
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Getting a rapid lateral flow test if you have no symptoms</h2>
-
-                    <p class="govuk-body govuk-!-margin-top-7"><strong>England</strong></p>
-                    <p class="govuk-body">If you have no symptoms and are not eligible for a PCR test for other reasons, you can:</p>
-                    <ul class="govuk-list govuk-list--bullet">
-                      <li>ask at your workplace, university or other place of study</li>
-                      <li><a class="govuk-link" href="../../../lfd-home-ordering/2/order-home-test.html">order rapid lateral flow tests to be sent to your home</a></li>
-                      <li><a class="govuk-link" href="https://maps.test-and-trace.nhs.uk/">find a site near you to get tested at</a></li>
-                      <li><a class="govuk-link" href="https://maps.test-and-trace.nhs.uk/">find a pharmacy where you can collect rapid lateral flow tests</a></li>
-                      <li><a class="govuk-link" href="https://find-covid-19-rapid-test-sites.maps.test-and-trace.nhs.uk/">find a test site where you can collect rapid lateral flow tests</a></li>
-                    </ul>
-
-                    <p class="govuk-body govuk-!-margin-top-7"><strong>Scotland, Wales and Northern Ireland</strong></p>
-                    <p class="govuk-body">Find out about <a class="govuk-link" href="https://www.gov.scot/publications/coronavirus-covid-19-getting-tested/pages/no-covid-symptoms/">rapid lateral flow tests in Scotland</a>, <a class="govuk-link" href="https://gov.wales/symptom-free-covid-19-community-testing">rapid lateral flow tests in Wales</a> or <a class="govuk-link" href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-testing-and-contact-tracing">rapid lateral flow tests in Northern Ireland</a>.</p>
+                    <p class="govuk-body">
+                      If you have no symptoms and are not eligible for a PCR test for other reasons, you can  <a class="govuk-link" href="../../../lfd-home-ordering/v1/order-home-test.html">order rapid lateral flow tests to be sent to your home</a><br><br>
+                      If you’re not sure about different test types, you can <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/get-tested-for-coronavirus/" class="govuk-link">find out which COVID-19 test you should get</a>.
+                    </p>
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">If you’re going into hospital</h2>
                     <p class="govuk-body">You may need to get tested if you’re due to have surgery or a procedure.</p>
                     <p class="govuk-body">The hospital will arrange this for you. Contact your hospital department if you have any questions.​</p>
+
+                    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">If you’re arriving in England from abroad</h2>
+                    <p class="govuk-body">
+                      You cannot use this service to book the 2 tests you need to take when you’re in quarantine.<br><br>
+                      You must <a href="https://www.gov.uk/guidance/providers-of-day-2-and-day-8-coronavirus-testing-for-international-arrivals">book a test from a private provider</a>.
+                    </p>
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">Get tested as soon as possible if you have symptoms</h2>
                     <p class="govuk-body">Book a visit to a test site to have the test today. Test sites are open 7 days a week. Order a home test kit if you cannot get to a test site.</p>
@@ -196,7 +187,7 @@
                     <p class="govuk-body">On day 8, you need to go to a test site - it's too late to order a home test kit.</p>
 
                     <p class="govuk-body govuk-!-margin-top-7"><strong>Scotland</strong></p>
-                    <p class="govuk-body">You need to get the test done in the first 5 days of having symptoms. This allows you the best chance of preventing the spread of coronavirus to others. After 5 days you should still book a test if you have been advised to do so by a healthcare professional.</p>
+                    <p class="govuk-body">You need to get the test done in the first 5 days of having symptoms. This allows you the best chance of preventing the spread of COVID-19 to others. After 5 days you should still book a test if you have been advised to do so by a healthcare professional.</p>
                     <p class="govuk-body">On days 1 to 4, you can get tested at a site or at home. If you’re ordering a home test kit on day 4, do it by 3pm.</p>
                     <p class="govuk-body">On day 5, you need to go to a test site - it’s too late to order a home test kit.</p>
 
@@ -205,27 +196,18 @@
                     <p class="govuk-body">On days 1 to 4, you can get tested at a site or at home. If you’re ordering a home test kit on day 4, do it by 3pm.</p>
                     <p class="govuk-body">On day 5, you need to go to a test site - it’s too late to order a home test kit.</p>
 
-                    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">Get a free PCR test</h2>
+                    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Order or book a test by phone</h2>
 
-                    <a href="/antigen/{{version}}/refer-and-triage/essential-worker" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-                      Start now
-                      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-                      </svg>
-                    </a>
-
-                    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Get help applying</h2>
-
-                    <div style="border-left: 10px solid #b1b4b6;" class="govuk-!-margin-top-6">
-                      <p class="govuk-body" style="padding: 1em">If no tests are available online, do not call helplines to get a test. No extra tests are available through the helplines.</p>
-                    </div>
-
-                    <p class="govuk-body govuk-!-margin-top-6">If you have other problems using the online service, call:</p>
+                    <p class="govuk-body govuk-!-margin-top-6">If you have problems or cannot use the online service, call:</p>
                     <ul class="govuk-list govuk-list--bullet">
                         <li>119 if you’re in England, Wales or Northern Ireland</li>
                         <li>0300 303 2713 if you’re in Scotland</li>
                     </ul>
                     <p class="govuk-body">Lines are open 7am to 11pm.</p>
+
+                    <div style="border-left: 10px solid #b1b4b6;" class="govuk-!-margin-top-6">
+                      <p class="govuk-body" style="padding: 1em">If no tests are available online, do not call helplines to get a test. No extra tests are available through the helplines.</p>
+                    </div>
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">What the PCR test involves</h2>
                     <p class="govuk-body">The test involves taking a swab of the inside of your nose and the back of your throat, using a long cotton bud.</p>
