--- a/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
+++ b/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
@@ -38,7 +38,7 @@
 
         <div id="content-1">
           <span id="post-code-hint" class="govuk-body">
-            <strong>
+            <strong class="govuk-!-font-size-24">
               {% if data['gp-address-same'] !== "No" %}
                 {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
                   {{ data['home-address'] }}
