--- a/app/views/antigen/v2/refer-and-triage/cannot-have-test.html
+++ b/app/views/antigen/v2/refer-and-triage/cannot-have-test.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "You're not eligible for a coronavirus PCR test" %}
+{% set pageTitle = "You're not eligible for a PCR test" %}
 
 {% extends "includes/layout.html" %}
 
@@ -23,75 +23,32 @@
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">{{ pageTitle }}</h1>
-
-        <p class="govuk-body">'PCR tests' are mainly for people who have coronavirus symptoms.</p>
-        <p class="govuk-body">We're sorry, there's only a limited number of these tests available. That's why we cannot give them to everyone.</p>
-                <p class="govuk-body">Also, you cannot have the test if your symptoms started too long ago.</p>
+        <p class="govuk-body">
+          ‘PCR tests’ are mainly for people who have coronavirus symptoms.<br><br>
+          You have told us one of the following:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>you do not have symptoms and are not eligible for a PCR test for other reasons</li>
+          <li>your symptoms started too long ago</li>
+        </ul>
       
-        <h2 class="govuk-heading-l">Do you want a 'no symptoms' test?</h2>
-
+        <h2 class="govuk-heading-m">Getting tested if you have no symptoms</h2>
         <p class="govuk-body">
-          If you do not have symptoms, you can take a rapid lateral flow test to check if you’re infectious. <a href="https://www.gov.uk/find-covid-19-lateral-flow-test-site" class="govuk-link" target="blank">Find out if your area offers rapid lateral flow test sites</a>.<br><br>
+          You can get a rapid lateral flow test if you do not have symptoms.<br><br>
+          This test is free and you get a result 30 minutes after taking the test.<br><br>
+          Find out how to get a test in your area:
         </p>
-
-                <h2 class="govuk-heading-l">Further advice</h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="https://www.gov.uk/getting-tested-for-coronavirus" target="blank" class="govuk-link">England</a></li>
+          <li><a href="https://www.gov.scot/communitytesting" target="blank" class="govuk-link">Scotland</a></li>
+          <li><a href="https://www.gov.wales/rapidtesting" target="blank" class="govuk-link">Wales</a></li>
+          <li><a href="https://www.health-ni.gov.uk/workforce-testing" target="blank" class="govuk-link">Northern Ireland</a></li>
+        </ul>
+      
+        <h2 class="govuk-heading-m">Getting tested if you're travelling to another country</h2>
         <p class="govuk-body">
-           Here’s some advice if you’re in one of the following situations.
+          If your travel company has asked you to get tested, and you do not have symptoms, you can <a class="govuk-link" target="blank" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/979933/covid-private-testing-providers-general-testing-230421.csv/preview">pay for a private test</a>.
         </p>
-
-        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-          <div class="govuk-accordion__section ">
-            <div class="govuk-accordion__section-header">
-              <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-                  I’ve been notified by NHS Test and Trace that I’m a contact of someone who has tested positive for coronavirus but I do not have symptoms
-                </span>
-              </h2>
-            </div>
-            <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
-              <p class="govuk-body">
-                You need to self-isolate immediately for 10 days.<br><br>
-                If you live in Scotland or Northern Ireland, you may be asked by contact tracers to get a test. Otherwise, you do not need to get a test unless you go on to get symptoms.
-              </p>
-            </div>
-          </div>
-          <div class="govuk-accordion__section ">
-            <div class="govuk-accordion__section-header">
-              <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-                  I'm planning to visit someone at higher risk from coronavirus and want to make sure I do not have the virus
-                </span>
-              </h2>
-            </div>
-            <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-              <p class='govuk-body'>
-                You could take a rapid lateral flow test to check if you’re infectious. However, you could still have the virus after a negative result - no test is 100% accurate.<br><br>
-                Being vaccinated does not mean you cannot pass the virus on either.<br><br>
-                The best thing you can do is to:
-              </p>
-              <ul class="govuk-list govuk-list--bullet">
-                <li>keep your distance from this person</li>
-                <li>wash your hands regularly</li>
-                <li>use a face covering</li>
-              </ul>
-              <p class='govuk-body'>If you are visiting someone in a care home, you may be offered a test by the care home.</p>
-              <p class='govuk-body'>Find out more about <a class="govuk-link" target="blank" href="https://www.nhs.uk/conditions/coronavirus-covid-19/social-distancing/what-you-need-to-do/">social distancing: what you need to do.</a></p>
-            </div>
-          </div>
-          <div class="govuk-accordion__section ">
-            <div class="govuk-accordion__section-header">
-              <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-                  I need to get a test to travel to another country
-                </span>
-              </h2>
-            </div>
-            <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
-              <p class='govuk-body'>If your travel company has asked you to get tested, and you do not have symptoms, you can <a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing" target="blank" class="govuk-link">pay for a private test</a>.</p>
-              <p class='govuk-body'>You cannot use this free service to get your test.</p>
-            </div>
-          </div>
-        </div>
 
     </div>
   </div>
