--- a/app/views/antigen/v2/global-registration/address-person-1.html
+++ b/app/views/antigen/v2/global-registration/address-person-1.html
@@ -27,21 +27,19 @@
     <form action="/antigen/{{version}}/global-registration/nhs-number-known-person-1" method="post">
 
       <fieldset class="govuk-fieldset" aria-describedby="post-code-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-            What is the home address registered with {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}'s GP?
-          </h1>
-        </legend>
 
-          <span id="post-code-hint" class="govuk-body">
-            This will help us find and update their GP record with their test result.<br><br>
-            The test does not have to be sent to this address.
-          </span>
-
-          <div class="govuk-!-margin-top-6">
             <div id="content-1">
-              <div class="govuk-form-group govuk-!-margin-top-5">
-                <label class="govuk-label govuk-!-margin-bottom-3" for="gp-postcode" style="line-height: 0.8;">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
+                  Enter the postcode registered with {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}'s GP
+                </h1>
+              </legend>
+      
+                <span id="post-code-hint" class="govuk-body">
+                  This will help us find and update their GP record with their test result.
+                </span>
+              <div class="govuk-form-group govuk-!-margin-top-6">
+                <label class="govuk-label govuk-!-margin-bottom-3" for="gp-postcode-person-1" style="line-height: 0.8;">
                   <strong>Postcode</strong>
                 </label>
                 <input class="govuk-input govuk-input--width-10" id="gp-postcode-person-1" name="gp-postcode-person-1" type="text" autocomplete="postal-code" value="{{ data['gp-postcode-person-1'] }}" autofocus>
@@ -49,11 +47,21 @@
             </div>
 
             <div id="content-2" style="display: none;">
-              <p class="govuk-!-margin-bottom-6" style="line-height: 0.8;">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
+                  Select the address registered with {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}'s GP
+                </h1>
+              </legend>
+      
+                <span id="post-code-hint" class="govuk-body">
+                  This will help us find and update their GP record with their test result.<br><br>
+                  If you cannot find their address in the list, select "I cannot find their address" and enter it manually.
+                </span>
+              <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
                 <strong>Postcode</strong><br><br>
                 {{ data['gp-postcode-person-1'] | default('LS1 3BE') }}
-                <a href="/antigen/{{version}}/global-registration/address-person-1-option-2" class="govuk-!-margin-left-5">
-                  Change
+                <a href="/antigen/{{version}}/global-registration/address-person-1" class="govuk-!-margin-left-5">
+                  <strong>Change</strong>
                   <span class="govuk-visually-hidden">your postcode</span>
                 </a>
               </p>
@@ -71,19 +79,25 @@
                 </select>
               </div>
               <p class="govuk-body">
-                <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">I can't find my address in the list</a>
+                <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">I cannot find their address in the list</a>
               </p>
             </div>
 
             <div id="content-3" style="display: none;">
-              <p class="govuk-!-margin-bottom-6" style="line-height: 0.8;">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
+                  Enter the address registered with {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}'s GP
+                </h1>
+              </legend>
+<!-- 
+              <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
                 <strong>Postcode</strong><br><br>
                 {{ data['gp-postcode-person-1'] | default('LS1 3BE') }}
-                <a href="/antigen/{{version}}/global-registration/address-person-1-option-2" class="govuk-!-margin-left-5">
-                  Change
+                <a href="/antigen/{{version}}/global-registration/address-person-1" class="govuk-!-margin-left-5">
+                  <strong>Change</strong>
                   <span class="govuk-visually-hidden">your postcode</span>
                 </a>
-              </p>
+              </p> -->
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-1-gp-person-1">
                   <strong>Building and street</strong> <span class="govuk-visually-hidden">line 1 of 2</span>
@@ -104,9 +118,14 @@
                 </label>
                 <input class="govuk-input govuk-!-width-one-third" id="address-town-gp-person-1" name="address-town-gp-person-1" type="text" autocomplete="address-level2-gp" value="{{ data['address-town-gp-person-1'] }}">
               </div>
-            </div>
 
-          </div>
+              <div class="govuk-form-group">
+                <label class="govuk-label" for="gp-postcode-person-1-manual">
+                  <strong>Postcode</strong>
+                </label>
+                <input class="govuk-input govuk-input--width-10" id="gp-postcode-person-1-manual" name="gp-postcode-person-1-manual" type="text" autocomplete="postal-code" value="{{ data['gp-postcode-person-1-manual'] }}">
+              </div>
+            </div>
 
         </fieldset>
 
