--- a/app/views/antigen/v2/global-registration/occupation.html
+++ b/app/views/antigen/v2/global-registration/occupation.html
@@ -23,7 +23,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form lass="form" action="/genomic-variants/1-have-you-travelled-overseas" method="post">
+    <form class="form" action="/genomic-variants/1-have-you-travelled-overseas" method="post">
       <div class="govuk-form-group govuk-!-margin-bottom-0">
         <h1 class="govuk-label-wrapper govuk-!-margin-bottom-8">
           <label class="govuk-label govuk-label--xl" for="occupation">
