--- a/app/views/antigen/v2/order-home-test-kit/confirm-email-address.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirm-email-address.html
@@ -32,7 +32,7 @@
 
         <fieldset class="govuk-fieldset" aria-describedby="email-address-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-heading-l govuk-!-margin-bottom-5">
+            <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
               {{ pageTitle }}
             </h1>
           </legend>
@@ -45,7 +45,7 @@
             <label class="govuk-label govuk-!-margin-top-7" for="email-address">
                 Email address
             </label>
-            <input class="govuk-input govuk-input--width-10" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
+            <input class="govuk-input" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
           </div>
         </fieldset>
 
