--- a/app/views/antigen/v2/refer-and-triage/how-will-you-get-test.html
+++ b/app/views/antigen/v2/refer-and-triage/how-will-you-get-test.html
@@ -51,7 +51,7 @@
                   <ul class="govuk-list govuk-list--bullet">
                     <li><span id="drive-through-1-hint">you need to book your test as soon as possible</span></li>
                     <li><span id="drive-through-2-hint">you or someone you live with must drive to the test site by car, small van or motorbike (some sites do not accept motorbikes)</span></li>
-                    <li><span id="drive-through-3-hint">site staff will tell you if an assistant does the swab test for you or if you do it yourself</span></li>
+                    <!-- <li><span id="drive-through-3-hint">site staff will tell you if an assistant does the swab test for you or if you do it yourself</span></li> -->
                     <li><span id="drive-through-4-hint">at some test sites, you may be able to ask a staff member to do the test for you</span></li>
                   </ul>
                   <span id="drive-through-4-hint" class="govuk-body-m">
@@ -74,7 +74,7 @@
                     <li><span id="walk-in-1-hint">you need to book your test slot as soon as possible</span></li>
                     <li><span id="walk-in-2-hint">do not travel to the test site by public transport or taxi</span></li>
                     <li><span id="walk-in-3-hint">you can choose to go by foot, bike or car (parking may not be available on site)</span></li>
-                    <li><span id="walk-in-4-hint">site staff will tell you if an assistant does the swab for you, or if you do it yourself</span></li>
+                    <!-- <li><span id="walk-in-4-hint">site staff will tell you if an assistant does the swab for you, or if you do it yourself</span></li> -->
                     <li><span id="walk-in-5-hint">you can ask for a staff member to guide you as you do this test yourself</span></li>
                   </ul>
                   <span id="walk-in-5-hint" class="govuk-body-m">
