--- a/app/views/antigen/v2/refer-and-triage/postcode.html
+++ b/app/views/antigen/v2/refer-and-triage/postcode.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter a postcode to find test options near you" %}
+{% set pageTitle = "Enter a postcode to find test sites near you" %}
 
 {% extends "includes/layout.html" %}
 
@@ -26,14 +26,14 @@
 
       <form action="/antigen/{{version}}/refer-and-triage/do-you-have-a-car" method="post">
 
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-              {{ pageTitle }}
-            </h1>
-          </legend>
+        <fieldset class="govuk-fieldset" aria-describedby="post-code-hint">
 
           <div id="content-1">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                {{ pageTitle }}
+              </h1>
+            </legend>
             <div class="govuk-form-group">
               <label class="govuk-label govuk-!-margin-bottom-3" for="home-postcode" style="line-height: 0.8;">
                 <strong>Postcode</strong>
@@ -43,11 +43,20 @@
           </div>
 
           <div id="content-2" style="display: none;">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                Select the address to find test sites near you
+              </h1>
+            </legend>
+            <span id="post-code-hint" class="govuk-body">
+              If you cannot find the address in the list, select "I cannot find the address" and enter it manually.<br><br>
+            </span>
+
             <p class="govuk-!-margin-bottom-6" style="line-height: 0.8;">
               <strong>Postcode</strong><br><br>
               {{ data['home-postcode'] | default('LS1 3BE') }}
               <a href="/antigen/{{version}}/refer-and-triage/postcode-option-2" class="govuk-!-margin-left-5">
-                Change
+                <strong>Change</strong>
                 <span class="govuk-visually-hidden">your postcode</span>
               </a>
             </p>
@@ -65,19 +74,24 @@
               </select>
             </div>
             <p class="govuk-body">
-              <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">I can't find my address in the list</a>
+              <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">I cannot find my address in the list</a>
             </p>
           </div>
 
           <div id="content-3" style="display: none;">
-            <p class="govuk-!-margin-bottom-6" style="line-height: 0.8;">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                Enter the address to find test sites near you
+              </h1>
+            </legend>
+            <!-- <p class="govuk-!-margin-bottom-6" style="line-height: 0.8;">
               <strong>Postcode</strong><br><br>
               {{ data['home-postcode'] | default('LS1 3BE') }}
               <a href="/antigen/{{version}}/refer-and-triage/postcode-option-2" class="govuk-!-margin-left-5">
-                Change
+                <strong>Change</strong>
                 <span class="govuk-visually-hidden">your postcode</span>
               </a>
-            </p>
+            </p> -->
             <div class="govuk-form-group">
               <label class="govuk-label" for="address-line-1">
                 <strong>Building and street</strong> <span class="govuk-visually-hidden">line 1 of 2</span>
@@ -97,6 +111,13 @@
                 <strong>Town or city</strong>
               </label>
               <input class="govuk-input govuk-!-width-one-third" id="address-town" name="address-town" type="text" autocomplete="address-level2" value="{{ data['address-town'] }}">
+            </div>
+
+            <div class="govuk-form-group">
+              <label class="govuk-label" for="home-postcode-manual">
+                <strong>Postcode</strong>
+              </label>
+              <input class="govuk-input govuk-input--width-10" id="home-postcode-manual" name="home-postcode-manual" type="text" autocomplete="postal-code" value="{{ data['home-postcode-manual'] }}">
             </div>
           </div>
 
