--- a/app/views/antigen/v2/refer-and-triage/reason-for-test.html
+++ b/app/views/antigen/v2/refer-and-triage/reason-for-test.html
@@ -66,7 +66,8 @@
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="who-asked-for-test-2" name="who-asked-for-test" type="radio" value="I'm a pregnant assistant in England employed by an individual to provide home-based adult care and support" {{ checked("who-asked-for-test", "I'm a pregnant assistant in England employed by an individual to provide home-based adult care and support") }}>
                     <label class="govuk-label govuk-radios__label" for="who-asked-for-test-2">
-                      I'm a personal assistant in England employed by an individual to provide home-based adult care and support
+                      I'm a personal assistant in England employed by an individual to provide home-based adult care and support<br>
+                      <span class="govuk-hint govuk-!-margin-bottom-1">There's now a quicker way for you to get tested. Please visit: https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests</span>
                     </label>
                   </div>
                   <div class="govuk-radios__item">
