--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -387,11 +387,7 @@
               Opt in
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['antibody-test'] == "Yes" %}
-              Yes
-              {% else %}
-              No
-              {% endif %}
+              {{ data['antibody-test'] or 'Yes' }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/antigen/{{version}}/global-registration/antibody-test">
@@ -405,11 +401,7 @@
               Able to do test
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['fingerprick-test'] == "Yes" %}
-              Yes
-              {% else %}
-              No
-              {% endif %}
+              {{ data['fingerprick-test'] or 'Yes' }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/antigen/{{version}}/global-registration/fingerprick-test">
@@ -424,10 +416,11 @@
               Delivery address
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['fingerprick-test'] == "Yes" %}
-              {{ data['delivery-address'] }}
+              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+              {{ data['delivery-address-antibody'] }}
               {% else %}
-              No
+                {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                {{ data['delivery-postcode-antibody'] or 'LS1 3BE' }}
               {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
