--- a/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
@@ -385,11 +385,7 @@
               Opt in
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['antibody-test-person-1'] == "Yes" %}
-              Yes
-              {% else %}
-              No
-              {% endif %}
+              {{ data['antibody-test-person-1'] or 'Yes' }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/antigen/{{version}}/global-registration/antibody-test-person-1">
@@ -403,11 +399,7 @@
               Able to do test
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['fingerprick-test-person-1'] == "Yes" %}
-              Yes
-              {% else %}
-              No
-              {% endif %}
+              {{ data['fingerprick-test-person-1'] or 'Yes' }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/antigen/{{version}}/global-registration/fingerprick-tes-person-1t">
@@ -422,10 +414,11 @@
               Delivery address
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data['fingerprick-test-person-1'] == "Yes" %}
-              {{ data['delivery-address'] }}
+              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+              {{ data['delivery-address-antibody'] }}
               {% else %}
-              No
+                {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
+                {{ data['delivery-postcode-antibody'] or 'LS1 3BE' }}
               {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
