--- a/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
+++ b/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Is this the address where the test kits should be sent?" %}
+{% set pageTitle = "Is this the address where the PCR test kits should be sent?" %}
 
 {% extends "includes/layout.html" %}
 
