--- a/app/views/antigen/v2/global-registration/cannot-get-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/cannot-get-test-person-1.html
@@ -14,11 +14,13 @@
     </span>
   </p>
 </div>
-{% if data['antibody-test-person-1'] == "No" %}
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-person-1">Back</a>
-{% else %}
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test-person-1">Back</a>
+
+{% if data['fingerprick-test-person-1'] == "No" and data['antibody-test-person-1'] == "Yes" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test-person-1">Back</a>
+{% elseif data['fingerprick-test-person-1'] == "No" and data['antibody-test-person-1'] == "No" or data['fingerprick-test-person-1'] == undefined and data['antibody-test-person-1'] == "No" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-person-1">Back</a>
 {% endif %}
+
 {% endblock %}
 
 {% block content %}
@@ -33,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="antibody-test-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                Unfortunately {{ data['first-name-person-1' or 'Pete'] }} {{ data['last-name-person-1' or 'Smith'] }} cannot get an antibody test
+                Unfortunately they cannot get an antibody test
               </h1>
             </legend>
             <span id="antibody-test-hint" class="govuk-body">
