--- a/app/views/antigen/v2/global-registration/cannot-get-test.html
+++ b/app/views/antigen/v2/global-registration/cannot-get-test.html
@@ -14,11 +14,13 @@
     </span>
   </p>
 </div>
-{% if data['antibody-test'] == "No" %}
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test">Back</a>
-{% else %}
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test">Back</a>
+
+{% if data['fingerprick-test'] == "No" and data['antibody-test'] == "Yes" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test">Back</a>
+{% elseif data['fingerprick-test'] == "No" and data['antibody-test'] == "No" or data['fingerprick-test'] == undefined and data['antibody-test'] == "No" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test">Back</a>
 {% endif %}
+
 {% endblock %}
 
 {% block content %}
